--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,6 +63,17 @@ services:
         networks:
             - trilha-corporativa
 
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin:latest
+        links:
+            - mysql
+        ports:
+            - "8041:80"
+        environment:
+            - PMA_ARBITRARY=1
+        networks:
+            - trilha-corporativa
+
 networks:
     trilha-corporativa:
         driver: bridge
